{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 42,
  "lineage": "fd36c3cf-cd74-eb71-dbf0-9b74059f019e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_vpc_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0424fcbc3ab780c18",
            "association_id": "eipassoc-02beb91e4406e6f3c",
            "domain": "vpc",
            "id": "eipalloc-0424fcbc3ab780c18",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-09f149f07d0900433",
            "private_dns": "ip-10-0-1-110.ap-south-1.compute.internal",
            "private_ip": "10.0.1.110",
            "public_dns": "ec2-43-205-11-67.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.11.67",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "My VPC Elastic IP"
            },
            "tags_all": {
              "Name": "My VPC Elastic IP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:295890776996:internet-gateway/igw-0a74a347b4fd96307",
            "id": "igw-0a74a347b4fd96307",
            "owner_id": "295890776996",
            "tags": {
              "Name": "My VPC IGW"
            },
            "tags_all": {
              "Name": "My VPC IGW"
            },
            "vpc_id": "vpc-034451421a0380fbe"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_vpc_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0424fcbc3ab780c18",
            "connectivity_type": "public",
            "id": "nat-068b49796e16d2445",
            "network_interface_id": "eni-09f149f07d0900433",
            "private_ip": "10.0.1.110",
            "public_ip": "43.205.11.67",
            "subnet_id": "subnet-019c959ef8550009d",
            "tags": {
              "Name": "My VPC nat gateway"
            },
            "tags_all": {
              "Name": "My VPC nat gateway"
            }
          },
          "dependencies": [
            "aws_eip.my_vpc_elastic_ip",
            "aws_internet_gateway.my_vpc_igw",
            "aws_subnet.my_vpc_pub_subnet_ap-south-1a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:295890776996:route-table/rtb-015927c0ea6c5b31a",
            "id": "rtb-015927c0ea6c5b31a",
            "owner_id": "295890776996",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-068b49796e16d2445",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private RT"
            },
            "tags_all": {
              "Name": "Private RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-034451421a0380fbe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my_vpc_elastic_ip",
            "aws_internet_gateway.my_vpc_igw",
            "aws_nat_gateway.my_vpc_nat_gateway",
            "aws_subnet.my_vpc_pub_subnet_ap-south-1a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:295890776996:route-table/rtb-064d720688de7143f",
            "id": "rtb-064d720688de7143f",
            "owner_id": "295890776996",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a74a347b4fd96307",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public RT"
            },
            "tags_all": {
              "Name": "Public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-034451421a0380fbe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_vpc_igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_ap-south-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069d59f866c247458",
            "route_table_id": "rtb-015927c0ea6c5b31a",
            "subnet_id": "subnet-0e4810feca23c583f"
          },
          "dependencies": [
            "aws_eip.my_vpc_elastic_ip",
            "aws_internet_gateway.my_vpc_igw",
            "aws_nat_gateway.my_vpc_nat_gateway",
            "aws_route_table.private_RT",
            "aws_subnet.my_vpc_pri_subnet_ap-south-1a",
            "aws_subnet.my_vpc_pub_subnet_ap-south-1a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_ap-south-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ea5d294b58b11be",
            "route_table_id": "rtb-015927c0ea6c5b31a",
            "subnet_id": "subnet-010f16a1aa4916caf"
          },
          "dependencies": [
            "aws_eip.my_vpc_elastic_ip",
            "aws_internet_gateway.my_vpc_igw",
            "aws_nat_gateway.my_vpc_nat_gateway",
            "aws_route_table.private_RT",
            "aws_subnet.my_vpc_pri_subnet_ap-south-1b",
            "aws_subnet.my_vpc_pub_subnet_ap-south-1a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_ap-south-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008118238eeeecbf7",
            "route_table_id": "rtb-064d720688de7143f",
            "subnet_id": "subnet-019c959ef8550009d"
          },
          "dependencies": [
            "aws_internet_gateway.my_vpc_igw",
            "aws_route_table.public_RT",
            "aws_subnet.my_vpc_pub_subnet_ap-south-1a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_ap-south-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0259760546d7c0fe5",
            "route_table_id": "rtb-064d720688de7143f",
            "subnet_id": "subnet-0acc5c7cecf50cd16"
          },
          "dependencies": [
            "aws_internet_gateway.my_vpc_igw",
            "aws_route_table.public_RT",
            "aws_subnet.my_vpc_pub_subnet_ap-south-1b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_vpc_pri_subnet_ap-south-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:295890776996:subnet/subnet-0e4810feca23c583f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4810feca23c583f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "295890776996",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pri Sub ap-south-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Pri Sub ap-south-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-034451421a0380fbe"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_vpc_pri_subnet_ap-south-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:295890776996:subnet/subnet-010f16a1aa4916caf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010f16a1aa4916caf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "295890776996",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pri Sub ap-south-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Pri Sub ap-south-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-034451421a0380fbe"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_vpc_pub_subnet_ap-south-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:295890776996:subnet/subnet-019c959ef8550009d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019c959ef8550009d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "295890776996",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pub Sub ap-south-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Pub Sub ap-south-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-034451421a0380fbe"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_vpc_pub_subnet_ap-south-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:295890776996:subnet/subnet-0acc5c7cecf50cd16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0acc5c7cecf50cd16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "295890776996",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pub Sub ap-south-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Pub Sub ap-south-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-034451421a0380fbe"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:295890776996:vpc/vpc-034451421a0380fbe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0359a29f54a28291e",
            "default_route_table_id": "rtb-0f3c945ea2a6009a6",
            "default_security_group_id": "sg-071a31dc2e3bf3d61",
            "dhcp_options_id": "dopt-002683eea9ae7d159",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-034451421a0380fbe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f3c945ea2a6009a6",
            "owner_id": "295890776996",
            "tags": {
              "Name": "My VPC"
            },
            "tags_all": {
              "Name": "My VPC"
            }
          }
        }
      ]
    }
  ]
}